Fix alignment for content

--- a/client/src/styles/tabela-red-voznje.css
+++ b/client/src/styles/tabela-red-voznje.css
@@ -76,6 +76,7 @@
     }
 
     .col-content {
+        justify-content: center;
         padding: 0 24px;
         max-height: 0;
         overflow: hidden;
